added more recipe pages and form

--- a/src/main/resources/templates/crabcake.html
+++ b/src/main/resources/templates/crabcake.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Crabcakes</title>
 
     <style>
 
         body {
             background-color: #9b2207;
-            width: 50%;
         }
 
         #full {
@@ -21,29 +20,29 @@
 
         header {
             text-align: center;
+            padding-top: .5%;
+            padding-bottom: 2%;
         }
-        .center {
-            text-align: center;
 
+        header h1{
+            font-size: 4em;
         }
 
 
     </style>
 
 </head>
-<body style="background-color: red;">
+<body>
 
 <div id="full">
 
     <header>
         <h1>Crabcake Recipe</h1>
+        <img src="https://cdn-image.foodandwine.com/sites/default/files/1532533774/baltimore-style-crab-cakes-XL-RECIPE0918.jpg"  height="450px" width="450px" alt="Crabcake"/>
+        <p><a href="/">Return to recipes</a></p>
     </header>
 
     <section>
-        <p class="center">
-            <img src="https://cdn-image.foodandwine.com/sites/default/files/1532533774/baltimore-style-crab-cakes-XL-RECIPE0918.jpg"  height="250px" width="250px" alt="Crabcake"/>
-        </p>
-
         <div id="ingredients">
             <h4>Ingredients:</h4>
             <ul>
