added css and another page

--- a/src/main/resources/templates/applepie.html
+++ b/src/main/resources/templates/applepie.html
@@ -1,8 +1,11 @@
+<!--HTML file -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Apple Pie</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 
     <style>
         body {
@@ -16,29 +19,6 @@
             background-color: #ffb070;
         }
 
-        header {
-            text-align: center;
-            padding-top: .5%;
-            padding-bottom: 2%;
-        }
-
-        header h1{
-            font-size: 4em;
-        }
-
-        #ingredients h4 {
-            font-size: 2em;
-        }
-        #ingredients ul {
-            font-size: 1.5em;
-        }
-
-        #directions h4 {
-            font-size: 2em;
-        }
-        #directions ol {
-            font-size: 1.5em;
-        }
     </style>
 
 </head>
@@ -50,8 +30,8 @@
             <img src="https://www.landolakes.com/RecipeManagementSystem/media/Recipe-Media-Files/Recipes/Retail/x17/16800-blue-ribbon-apple-pie-600x600.jpg?ext=.jpg" height="450px" width="450px" />
             <p><a href="/">Return to recipes</a></p>
         </header>
-        <section id="ingredients">
-            <h4>Apple Pie</h4>
+        <section id="ingredients" class="section">
+            <h4>Ingredients</h4>
             <ul>
                 <li>3/4 cup white sugar</li>
                 <li>2 tbsp. all-purpose flour</li>
@@ -65,7 +45,7 @@
                 <li>4 tbsp. milk (optional)</li>
             </ul>
         </section>
-        <section id="directions">
+        <section id="directions" class="section">
             <h4>Directions</h4>
             <ol>
                 <li>Preheat oven to 425 degrees F (220 degrees C).</li>
@@ -82,6 +62,10 @@
                 <li>Bake at 425 degrees F (220 degrees C) for 40 to 50 minutes.</li>
             </ol>
         </section>
+        <footer>
+            <h3>ENJOY!</h3>
+            <p><a href="/">Return to recipes</a></p>
+        </footer>
     </div>
 </body>
 </html>
