--- a/src/main/resources/templates/bananabread.html
+++ b/src/main/resources/templates/bananabread.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Banana Bread</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 
     <style>
         body {
@@ -14,30 +15,6 @@
             margin: 0 auto;
             padding: 2%;
             background-color: #f9d9ae;
-        }
-
-        header {
-            text-align: center;
-            padding-top: .5%;
-            padding-bottom: 2%;
-        }
-
-        header h1{
-            font-size: 4em;
-        }
-
-        #ingredients h4 {
-            font-size: 2em;
-        }
-        #ingredients ul {
-            font-size: 1.5em;
-        }
-
-        #directions h4 {
-            font-size: 2em;
-        }
-        #directions ol {
-            font-size: 1.5em;
         }
 
     </style>
@@ -88,6 +65,10 @@
                 </li>
             </ol>
         </section>
+        <footer>
+            <h3>ENJOY!</h3>
+            <p><a href="/">Return to recipes</a></p>
+        </footer>
     </div>
 </body>
 </html>
