--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,6 +26,7 @@
             padding-top: .5%;
             padding-bottom: 2%;
             font-size: 4em;
+            color: #473122;
         }
 
         #recipes h4 {
@@ -81,6 +82,10 @@
                 <dl>
                     <dt><a href="/applepie">Apple Pie</a></dt>
                     <dd>This is a recipe for Apple Pie</dd>
+                </dl>
+                <dl>
+                    <dt><a href="/chocolatechipcookie">Chocolate Chip Cookies</a></dt>
+                    <dd>This is a recipe for Chocolate Chip Cookies</dd>
                 </dl>
                 <hr />
             </section>
