--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -3,8 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>table</title>
+
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 </head>
 <body>
-
+<h1>Table</h1>
+<table>
+    <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Grade</th>
+    </tr>
+    <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>A+</td>
+    </tr>
+    <tr>
+        <td>Jane</td>
+        <td>Johnson</td>
+        <td>C+</td>
+    </tr>
+    <tr>
+        <td>Jack</td>
+        <td>Smith</td>
+        <td>F</td>
+    </tr>
+    <tr>
+        <td>John</td>
+        <td>Jackson</td>
+        <td>B-</td>
+    </tr>
+</table>
 </body>
 </html>
